# siplus-js

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  Readme.md  package-lock.json  package.json  tsconfig.json
dependencies/: CMakeLists.txt
dependencies/siplus/: CMakeLists.txt
docs/: changelog.md
scripts/: build.sh
src/: index.ts
test/: index.test.js  locateFile.test.js  wasmBinary.test.js
wasm/: CMakeLists.txt  lib.cpp  stdlib.cpp  stdlib.h
